tests/ui/parser/issues/issue-87217-keyword-order/wrong-async.stderr
error: expected one of `extern` or `fn`, found keyword `async`
  --> $DIR/wrong-async.rs:9:8
   |
LL | unsafe async fn test() {}
   |        ^^^^^ expected one of `extern` or `fn`
   |
   = note: keyword order for functions declaration is `pub`, `default`, `const`, `async`, `unsafe`, `extern`
help: `async` must come before `unsafe`
   |
LL | async unsafe fn test() {}
   | ~~~~~~~~~~~~

error: aborting due to 1 previous error

